Hover state fix and default mouse cursor icon fix on scrollbar.

--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -27,6 +27,10 @@
 	position:absolute;
 }
 
+.cScrollScrollbarHovered{
+	
+}
+
 .cScrollScrollbarX{
 	background-color:rgba(92,106,231,0.8);
 }
@@ -89,6 +93,7 @@
 
 .cScrollTrack{
 	position:absolute;
+	cursor:default;
 }
 
 .cScrollTrackX{
@@ -114,7 +119,7 @@
 	*/
 }
 
-.cScrollScrollbarHovered .cScrollThumb{
+.cScrollThumbHovered{
 	background-color:rgba(250,30,200,0.8);
 }
 
